# fw-builder

./: .gitmodules  LICENSE  README.md  build.sh  pframe.sh
init/: init.sh
init/patch/libubox/: CMakeLists.txt
init/patch/opkg/: CMakeLists.txt
init/patch/opkg/src/: CMakeLists.txt
modules/fw_build/: ml.sh
modules/ipk_build/: ipkg-build  ml.sh
modules/opkg_install/: ml.sh
modules/opkg_rmpkg/: ml.sh
scripts/: base.sh  fbc.sh  parser.sh  sec_replace.pl
templates/common/: tl.sh
templates/firmware/: tl.sh
templates/firmware/config/: fw_build.n  ipk-build.n  opkg.n
